--- a/src/components/admin-panel.css
+++ b/src/components/admin-panel.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 
 .admin-panel {
   display: flex;
@@ -6,14 +6,6 @@
   align-items: center;
   height: 50vh;
   width: 100%;
-  padding-top: 20px;
   font-family: "Roboto", sans-serif;
   border-bottom: 4px solid gray;
-}
-
-.admin-panel h1 {
-  text-align: center;
-  font-weight: 400;
-  font-family: "Roboto", sans-serif;
-  font-size: 2rem;
-}
+} */
